[package]
name = "neqo-common"
version = "0.6.4"
authors = ["Bobby Holley <bobbyholley@gmail.com>"]
edition = "2018"
rust-version = "1.57.0"
license = "MIT/Apache-2.0"
build = "build.rs"

[dependencies]
log = {version = "=0.4.17", default-features = false}
env_logger = {version = "0.9", default-features = false}
lazy_static = "1.3.0"
qlog = "0.4.0"
chrono = {version = "0.4.10", default-features = false, features = ["std"]}
# Pinning dependency for CI
# error: package `enumset v1.1.5` cannot be built because it requires rustc 1.61 or newer, while the currently active rustc version is 1.57.0
enumset = "=1.0.12"
# error[E0658]: use of unstable library feature 'mixed_integer_ops'
unicode-width = "=0.1.10"
# error: there is no argument named `arch`
clang-sys = "=1.7.0"

[features]
default = ["deny-warnings"]
deny-warnings = []

[target."cfg(windows)".dependencies.winapi]
version = "0.3"
features = ["timeapi"]
